feat: enhance app structure and dependencies, add error boundary and safe gradient component

--- a/app.json
+++ b/app.json
@@ -30,7 +30,8 @@
       "favicon": "./assets/logo.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-asset"
     ],
     "experiments": {
       "typedRoutes": true
