refactor: update app branding and improve UI components; change backend references from RCP to RSP; add new dependencies for enhanced functionality

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@
 # -------------------------------------------
 # Backend API
 # -------------------------------------------
-# Base URL of the RCP backend (no trailing slash).
+# Base URL of the RSP backend (no trailing slash).
 # - Emulator: use localhost or Android 10.0.2.2:8080
 # - Physical device: use your computer's LAN IP so the phone can reach the backend
 #
