feat: update API handling and improve license check; enhance UI components and add new dependencies

--- a/app.json
+++ b/app.json
@@ -31,7 +31,18 @@
     },
     "plugins": [
       "expo-router",
-      "expo-asset"
+      "expo-asset",
+      [
+        "expo-build-properties",
+        {
+          "android": { "usesCleartextTraffic": true },
+          "ios": {
+            "infoPlist": {
+              "NSAppTransportSecurity": { "NSAllowsArbitraryLoads": true }
+            }
+          }
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
