--- a/app.json
+++ b/app.json
@@ -18,6 +18,7 @@
       "bundleIdentifier": "com.fgeha.app"
     },
     "android": {
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/logo.png",
         "backgroundColor": "#FFFFFF"
@@ -35,7 +36,11 @@
       [
         "expo-build-properties",
         {
-          "android": { "usesCleartextTraffic": true },
+          "android": {
+            "usesCleartextTraffic": true,
+            "enableProguardInReleaseBuilds": true,
+            "enableShrinkResourcesInReleaseBuilds": true
+          },
           "ios": {
             "infoPlist": {
               "NSAppTransportSecurity": { "NSAllowsArbitraryLoads": true }
